# DVP_capture

./: CMakeLists.txt  README.md  dvp2proc2spi.c  dvp2spi copy.c  dvp2spi.c  dvp2spi.pio  dvp2spi.pio.h  dvp_capture.c  dvp_process.c
boards/: custom_lidar.h
